package Decorator;

public interface Telefono {
    void crear();

}
